--- a/index.html
+++ b/index.html
@@ -1,19 +1,736 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-	<meta charset="UTF-8"/>
+	<meta charset="UTF-8" />
 	<title>Application Javascript</title>
-	<link rel="stylesheet" href="./src/style.css"/>
+	<link rel="stylesheet" href="./src/style.css" />
+	<link rel="stylesheet" href="./src/tableau.css" />
 	<script type="module">
 		import App from "./src/App.js";
 		App.load().then(() => App.main());
 	</script>
 </head>
+
 <body>
 	<div id="interface">
-		<header><h1>Application Javascript</h1></header>
+		<header>
+			<h1>Application Javascript</h1>
+		</header>
 		<footer><span>&copy; 2019</span><strong>Application Javascript</strong></footer>
-		<div class="body" id="app"></div>
+		<div class="body" id="app">
+			<!-- <table border="1">
+				<thead>
+					<tr id="">
+						<th title="Nom complet équipe" class="rt-header-cell rt-header-cell__left">Équipe</th>
+						<th title="Saison" class="rt-header-cell rt-header-cell__left">Saison</th>
+						<th title="Matchs joués">MJ</th>
+						<th title="Victoires">V</th>
+						<th title="Défaites">D</th>
+						<th title="Nulles">N</th>
+						<th title="Défaites en prolongation">Prol</th>
+						<th title="Points">PTS</th>
+						<th title="Victoires en temps rég plus prolongation">VRP</th>
+						<th title="% points">%PTS</th>
+						<th title="Buts pour">BP</th>
+						<th title="Buts contre">BC</th>
+						<th title="Matchs gagnés en fusillade">Victoires fus</th>
+						<th title="Buts pour par match">BP/MJ</th>
+						<th title="Buts contre par match">BC/MJ</th>
+						<th title="Pourcentage avantage numérique">%AN</th>
+						<th title="Pourcentage infériorité numérique">%IN</th>
+						<th title="Tirs pour par match">Tirs/MJ</th>
+						<th title="Tirs contre par match">TC/MJ</th>
+						<th title="Pourcentage mises en jeu gagnées">%MEJG</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr id="MIN">
+						<td>Wild du Minnesota</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>5</td>
+						<td>9</td>
+						<td>0</td>
+						<td>1</td>
+						<td>11</td>
+						<td>5</td>
+						<td>.367</td>
+						<td>37</td>
+						<td>51</td>
+						<td>0</td>
+						<td>2.47</td>
+						<td>3.40</td>
+						<td>18.4</td>
+						<td>83.0</td>
+						<td>28.8</td>
+						<td>30.5</td>
+						<td>48.5</td>
+					</tr>
+					<tr id="OTT">
+						<td>Sénateurs d'Ottawa</td>
+						<td>2019-20</td>
+						<td>14</td>
+						<td>4</td>
+						<td>9</td>
+						<td>0</td>
+						<td>1</td>
+						<td>9</td>
+						<td>4</td>
+						<td>.321</td>
+						<td>38</td>
+						<td>47</td>
+						<td>0</td>
+						<td>2.71</td>
+						<td>3.36</td>
+						<td>7.7</td>
+						<td>79.7</td>
+						<td>30.9</td>
+						<td>34.5</td>
+						<td>50.4</td>
+					</tr>
+					<tr id="DAT">
+						<td>Stars de Dallas</td>
+						<td>2019-20</td>
+						<td>17</td>
+						<td>8</td>
+						<td>8</td>
+						<td>0</td>
+						<td>1</td>
+						<td>17</td>
+						<td>8</td>
+						<td>.500</td>
+						<td>41</td>
+						<td>41</td>
+						<td>0</td>
+						<td>2.41</td>
+						<td>2.41</td>
+						<td>13.2</td>
+						<td>84.1</td>
+						<td>29.7</td>
+						<td>29.9</td>
+						<td>52.5</td>
+					</tr>
+					<tr id="SJS">
+						<td>Sharks de San Jose</td>
+						<td>2019-20</td>
+						<td>16</td>
+						<td>5</td>
+						<td>10</td>
+						<td>0</td>
+						<td>1</td>
+						<td>11</td>
+						<td>5</td>
+						<td>.344</td>
+						<td>40</td>
+						<td>58</td>
+						<td>0</td>
+						<td>2.50</td>
+						<td>3.63</td>
+						<td>20.8</td>
+						<td>90.2</td>
+						<td>29.3</td>
+						<td>30.6</td>
+						<td>51.1</td>
+					</tr>
+					<tr id="BUF">
+						<td>Sabres de Buffalo</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>9</td>
+						<td>4</td>
+						<td>0</td>
+						<td>2</td>
+						<td>20</td>
+						<td>8</td>
+						<td>.667</td>
+						<td>44</td>
+						<td>39</td>
+						<td>1</td>
+						<td>2.93</td>
+						<td>2.60</td>
+						<td>26.9</td>
+						<td>80.5</td>
+						<td>30.0</td>
+						<td>32.7</td>
+						<td>47.5</td>
+					</tr>
+					<tr id="DET">
+						<td>Red Wings de Detroit</td>
+						<td>2019-20</td>
+						<td>17</td>
+						<td>4</td>
+						<td>12</td>
+						<td>0</td>
+						<td>1</td>
+						<td>9</td>
+						<td>4</td>
+						<td>.265</td>
+						<td>35</td>
+						<td>68</td>
+						<td>0</td>
+						<td>2.06</td>
+						<td>4.00</td>
+						<td>12.7</td>
+						<td>66.7</td>
+						<td>30.6</td>
+						<td>33.1</td>
+						<td>48.7</td>
+					</tr>
+					<tr id="NYR">
+						<td>Rangers de New York</td>
+						<td>2019-20</td>
+						<td>13</td>
+						<td>6</td>
+						<td>6</td>
+						<td>0</td>
+						<td>1</td>
+						<td>13</td>
+						<td>6</td>
+						<td>.500</td>
+						<td>42</td>
+						<td>43</td>
+						<td>0</td>
+						<td>3.23</td>
+						<td>3.31</td>
+						<td>20.8</td>
+						<td>80.4</td>
+						<td>30.1</td>
+						<td>35.5</td>
+						<td>49.9</td>
+					</tr>
+					<tr id="NSH">
+						<td>Predators de Nashville</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>9</td>
+						<td>4</td>
+						<td>0</td>
+						<td>2</td>
+						<td>20</td>
+						<td>9</td>
+						<td>.667</td>
+						<td>60</td>
+						<td>42</td>
+						<td>0</td>
+						<td>4.00</td>
+						<td>2.80</td>
+						<td>20.7</td>
+						<td>78.7</td>
+						<td>33.1</td>
+						<td>28.8</td>
+						<td>50.7</td>
+					</tr>
+					<tr id="PIT">
+						<td>Penguins de Pittsburgh</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>8</td>
+						<td>6</td>
+						<td>0</td>
+						<td>1</td>
+						<td>17</td>
+						<td>8</td>
+						<td>.567</td>
+						<td>51</td>
+						<td>39</td>
+						<td>0</td>
+						<td>3.40</td>
+						<td>2.60</td>
+						<td>14.0</td>
+						<td>86.5</td>
+						<td>34.4</td>
+						<td>29.5</td>
+						<td>50.6</td>
+					</tr>
+					<tr id="FLA">
+						<td>Panthers de la Floride</td>
+						<td>2019-20</td>
+						<td>14</td>
+						<td>7</td>
+						<td>3</td>
+						<td>0</td>
+						<td>4</td>
+						<td>18</td>
+						<td>6</td>
+						<td>.643</td>
+						<td>50</td>
+						<td>48</td>
+						<td>1</td>
+						<td>3.57</td>
+						<td>3.43</td>
+						<td>21.9</td>
+						<td>86.1</td>
+						<td>34.8</td>
+						<td>29.4</td>
+						<td>47.1</td>
+					</tr>
+					<tr id="EDM">
+						<td>Oilers d'Edmonton</td>
+						<td>2019-20</td>
+						<td>16</td>
+						<td>10</td>
+						<td>4</td>
+						<td>0</td>
+						<td>2</td>
+						<td>22</td>
+						<td>9</td>
+						<td>.688</td>
+						<td>45</td>
+						<td>40</td>
+						<td>1</td>
+						<td>2.81</td>
+						<td>2.50</td>
+						<td>26.7</td>
+						<td>86.3</td>
+						<td>28.4</td>
+						<td>30.9</td>
+						<td>48.3</td>
+					</tr>
+					<tr id="TOR">
+						<td>Maple Leafs de Toronto</td>
+						<td>2019-20</td>
+						<td>16</td>
+						<td>8</td>
+						<td>5</td>
+						<td>0</td>
+						<td>3</td>
+						<td>19</td>
+						<td>7</td>
+						<td>.594</td>
+						<td>55</td>
+						<td>52</td>
+						<td>1</td>
+						<td>3.44</td>
+						<td>3.25</td>
+						<td>17.3</td>
+						<td>75.4</td>
+						<td>31.6</td>
+						<td>32.8</td>
+						<td>52.9</td>
+					</tr>
+					<tr id="TBL">
+						<td>Lightning de Tampa Bay</td>
+						<td>2019-20</td>
+						<td>13</td>
+						<td>6</td>
+						<td>5</td>
+						<td>0</td>
+						<td>2</td>
+						<td>14</td>
+						<td>5</td>
+						<td>.538</td>
+						<td>43</td>
+						<td>47</td>
+						<td>1</td>
+						<td>3.31</td>
+						<td>3.62</td>
+						<td>22.9</td>
+						<td>72.9</td>
+						<td>30.9</td>
+						<td>35.0</td>
+						<td>50.7</td>
+					</tr>
+					<tr id="LAK">
+						<td>Kings de Los Angeles</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>5</td>
+						<td>10</td>
+						<td>0</td>
+						<td>0</td>
+						<td>10</td>
+						<td>5</td>
+						<td>.333</td>
+						<td>39</td>
+						<td>60</td>
+						<td>0</td>
+						<td>2.60</td>
+						<td>4.00</td>
+						<td>10.3</td>
+						<td>69.8</td>
+						<td>36.3</td>
+						<td>29.3</td>
+						<td>50.0</td>
+					</tr>
+					<tr id="WIN">
+						<td>Jets de Winnipeg</td>
+						<td>2019-20</td>
+						<td>16</td>
+						<td>8</td>
+						<td>7</td>
+						<td>0</td>
+						<td>1</td>
+						<td>17</td>
+						<td>6</td>
+						<td>.531</td>
+						<td>42</td>
+						<td>50</td>
+						<td>2</td>
+						<td>2.63</td>
+						<td>3.13</td>
+						<td>15.4</td>
+						<td>70.6</td>
+						<td>33.1</td>
+						<td>33.6</td>
+						<td>50.5</td>
+					</tr>
+					<tr id="NYI">
+						<td>Islanders de New York</td>
+						<td>2019-20</td>
+						<td>14</td>
+						<td>11</td>
+						<td>3</td>
+						<td>0</td>
+						<td>0</td>
+						<td>22</td>
+						<td>10</td>
+						<td>.786</td>
+						<td>43</td>
+						<td>30</td>
+						<td>1</td>
+						<td>3.07</td>
+						<td>2.14</td>
+						<td>20.8</td>
+						<td>85.4</td>
+						<td>27.4</td>
+						<td>31.1</td>
+						<td>47.0</td>
+					</tr>
+					<tr id="CAR">
+						<td>Hurricanes de la Caroline</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>9</td>
+						<td>5</td>
+						<td>0</td>
+						<td>1</td>
+						<td>19</td>
+						<td>8</td>
+						<td>.633</td>
+						<td>49</td>
+						<td>42</td>
+						<td>1</td>
+						<td>3.27</td>
+						<td>2.80</td>
+						<td>22.4</td>
+						<td>80.7</td>
+						<td>32.3</td>
+						<td>29.2</td>
+						<td>49.1</td>
+					</tr>
+					<tr id="VGK">
+						<td>Golden Knights de Vegas</td>
+						<td>2019-20</td>
+						<td>16</td>
+						<td>9</td>
+						<td>5</td>
+						<td>0</td>
+						<td>2</td>
+						<td>20</td>
+						<td>7</td>
+						<td>.625</td>
+						<td>49</td>
+						<td>46</td>
+						<td>2</td>
+						<td>3.06</td>
+						<td>2.88</td>
+						<td>23.6</td>
+						<td>89.8</td>
+						<td>34.1</td>
+						<td>32.7</td>
+						<td>49.5</td>
+					</tr>
+					<tr id="PHI">
+						<td>Flyers de Philadelphie</td>
+						<td>2019-20</td>
+						<td>14</td>
+						<td>7</td>
+						<td>5</td>
+						<td>0</td>
+						<td>2</td>
+						<td>16</td>
+						<td>6</td>
+						<td>.571</td>
+						<td>46</td>
+						<td>44</td>
+						<td>1</td>
+						<td>3.29</td>
+						<td>3.14</td>
+						<td>24.1</td>
+						<td>83.7</td>
+						<td>34.5</td>
+						<td>28.4</td>
+						<td>55.8</td>
+					</tr>
+					<tr id="CGY">
+						<td>Flames de Calgary</td>
+						<td>2019-20</td>
+						<td>18</td>
+						<td>9</td>
+						<td>7</td>
+						<td>0</td>
+						<td>2</td>
+						<td>20</td>
+						<td>7</td>
+						<td>.556</td>
+						<td>50</td>
+						<td>53</td>
+						<td>2</td>
+						<td>2.78</td>
+						<td>2.94</td>
+						<td>17.2</td>
+						<td>87.9</td>
+						<td>30.9</td>
+						<td>32.3</td>
+						<td>48.9</td>
+					</tr>
+					<tr id="ANA">
+						<td>Ducks d'Anaheim</td>
+						<td>2019-20</td>
+						<td>17</td>
+						<td>9</td>
+						<td>7</td>
+						<td>0</td>
+						<td>1</td>
+						<td>19</td>
+						<td>9</td>
+						<td>.559</td>
+						<td>45</td>
+						<td>43</td>
+						<td>0</td>
+						<td>2.65</td>
+						<td>2.53</td>
+						<td>9.5</td>
+						<td>82.0</td>
+						<td>28.5</td>
+						<td>32.5</td>
+						<td>52.2</td>
+					</tr>
+					<tr id="NJD">
+						<td>Devils du New Jersey</td>
+						<td>2019-20</td>
+						<td>13</td>
+						<td>4</td>
+						<td>5</td>
+						<td>0</td>
+						<td>4</td>
+						<td>12</td>
+						<td>3</td>
+						<td>.462</td>
+						<td>37</td>
+						<td>48</td>
+						<td>1</td>
+						<td>2.85</td>
+						<td>3.69</td>
+						<td>14.0</td>
+						<td>75.5</td>
+						<td>30.0</td>
+						<td>28.8</td>
+						<td>48.6</td>
+					</tr>
+					<tr id="ARI">
+						<td>Coyotes de l'Arizona</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>9</td>
+						<td>4</td>
+						<td>0</td>
+						<td>2</td>
+						<td>20</td>
+						<td>8</td>
+						<td>.667</td>
+						<td>43</td>
+						<td>34</td>
+						<td>1</td>
+						<td>2.87</td>
+						<td>2.27</td>
+						<td>18.8</td>
+						<td>80.4</td>
+						<td>31.2</td>
+						<td>31.2</td>
+						<td>48.7</td>
+					</tr>
+					<tr id="WSH">
+						<td>Capitals de Washington</td>
+						<td>2019-20</td>
+						<td>16</td>
+						<td>11</td>
+						<td>2</td>
+						<td>0</td>
+						<td>3</td>
+						<td>25</td>
+						<td>10</td>
+						<td>.781</td>
+						<td>63</td>
+						<td>49</td>
+						<td>1</td>
+						<td>3.94</td>
+						<td>3.06</td>
+						<td>25.9</td>
+						<td>86.2</td>
+						<td>30.8</td>
+						<td>30.7</td>
+						<td>50.0</td>
+					</tr>
+					<tr id="VAN">
+						<td>Canucks de Vancouver</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>9</td>
+						<td>3</td>
+						<td>0</td>
+						<td>3</td>
+						<td>21</td>
+						<td>7</td>
+						<td>.700</td>
+						<td>52</td>
+						<td>35</td>
+						<td>2</td>
+						<td>3.47</td>
+						<td>2.33</td>
+						<td>21.9</td>
+						<td>88.7</td>
+						<td>34.0</td>
+						<td>30.0</td>
+						<td>54.5</td>
+					</tr>
+					<tr id="MTL">
+						<td>Canadiens de Montréal</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>8</td>
+						<td>5</td>
+						<td>0</td>
+						<td>2</td>
+						<td>18</td>
+						<td>7</td>
+						<td>.600</td>
+						<td>55</td>
+						<td>48</td>
+						<td>1</td>
+						<td>3.67</td>
+						<td>3.20</td>
+						<td>20.0</td>
+						<td>68.9</td>
+						<td>34.0</td>
+						<td>31.7</td>
+						<td>47.6</td>
+					</tr>
+					<tr id="BOS">
+						<td>Bruins de Boston</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>11</td>
+						<td>2</td>
+						<td>0</td>
+						<td>2</td>
+						<td>24</td>
+						<td>11</td>
+						<td>.800</td>
+						<td>56</td>
+						<td>35</td>
+						<td>0</td>
+						<td>3.73</td>
+						<td>2.33</td>
+						<td>31.4</td>
+						<td>86.7</td>
+						<td>32.7</td>
+						<td>31.4</td>
+						<td>50.4</td>
+					</tr>
+					<tr id="SYL">
+						<td>Blues de St. Louis</td>
+						<td>2019-20</td>
+						<td>16</td>
+						<td>10</td>
+						<td>3</td>
+						<td>0</td>
+						<td>3</td>
+						<td>23</td>
+						<td>10</td>
+						<td>.719</td>
+						<td>49</td>
+						<td>46</td>
+						<td>0</td>
+						<td>3.06</td>
+						<td>2.88</td>
+						<td>23.5</td>
+						<td>81.6</td>
+						<td>28.6</td>
+						<td>30.4</td>
+						<td>52.3</td>
+					</tr>
+					<tr id="CBJ">
+						<td>Blue Jackets de Columbus</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>5</td>
+						<td>7</td>
+						<td>0</td>
+						<td>3</td>
+						<td>13</td>
+						<td>5</td>
+						<td>.433</td>
+						<td>35</td>
+						<td>52</td>
+						<td>0</td>
+						<td>2.33</td>
+						<td>3.47</td>
+						<td>12.5</td>
+						<td>76.1</td>
+						<td>33.1</td>
+						<td>30.3</td>
+						<td>49.4</td>
+					</tr>
+					<tr id="CHI">
+						<td>Blackhawks de Chicago</td>
+						<td>2019-20</td>
+						<td>14</td>
+						<td>4</td>
+						<td>7</td>
+						<td>0</td>
+						<td>3</td>
+						<td>11</td>
+						<td>4</td>
+						<td>.393</td>
+						<td>33</td>
+						<td>43</td>
+						<td>0</td>
+						<td>2.36</td>
+						<td>3.07</td>
+						<td>11.9</td>
+						<td>80.4</td>
+						<td>30.1</td>
+						<td>35.6</td>
+						<td>49.2</td>
+					</tr>
+					<tr id="COL">
+						<td>Avalanche du Colorado</td>
+						<td>2019-20</td>
+						<td>15</td>
+						<td>8</td>
+						<td>5</td>
+						<td>0</td>
+						<td>2</td>
+						<td>18</td>
+						<td>8</td>
+						<td>.600</td>
+						<td>49</td>
+						<td>43</td>
+						<td>0</td>
+						<td>3.27</td>
+						<td>2.87</td>
+						<td>17.5</td>
+						<td>84.0</td>
+						<td>32.3</td>
+						<td>33.5</td>
+						<td>46.5</td>
+					</tr>
+				</tbody>
+			</table> -->
+		</div>
 	</div>
 </body>
+
 </html>
