--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Application Javascript</title>
+	<title>Les statistiques</title>
 	<link rel="stylesheet" href="./src/style.css" />
 	<link rel="stylesheet" href="./src/tableau.css" />
 	<script type="module">
 		import App from "./src/App.js";
-		App.load().then(() => App.init()).then(() => App.main());
 	</script>
 </head>
 
 <body>
 	<div id="interface">
 		<header>
-			<h1>Application Javascript</h1>
+			<h1>Les statistiques</h1>
 		</header>
-		<footer><span>&copy; 2019</span><strong>Application Javascript</strong></footer>
+		<footer><span>&copy; Web 2 : Dynamique</span><strong>Les statistiques</strong></footer>
 		<div class="body" id="app">
 		</div>
 	</div>
